[gd_scene load_steps=12 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://World/Boiler Room.ogg" type="AudioStream" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Exit/Exit.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/World.gd" type="Script" id=5]
[ext_resource path="res://Exit/Door Open.wav" type="AudioStream" id=6]
[ext_resource path="res://World/Hit Thud.wav" type="AudioStream" id=8]
[ext_resource path="res://World/Death Breath.wav" type="AudioStream" id=9]
[ext_resource path="res://Generator/Generator.tscn" type="PackedScene" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
0/name = "icon.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Exit" parent="." instance=ExtResource( 4 )]

[node name="Generator" parent="." instance=ExtResource( 10 )]
position = Vector2( -1094, -531 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( -720917, 0, 0, -720916, 0, 0, -720915, 0, 0, -720914, 0, 0, -720913, 0, 0, -720912, 0, 0, -720911, 0, 0, -720910, 0, 0, -720909, 0, 0, -720908, 0, 0, -720907, 0, 0, -720906, 0, 0, -720905, 0, 0, -720904, 0, 0, -720903, 0, 0, -720902, 0, 0, -720901, 0, 0, -720900, 0, 0, -720899, 0, 0, -720898, 0, 0, -720897, 0, 0, -786432, 0, 0, -786431, 0, 0, -786430, 0, 0, -786429, 0, 0, -786428, 0, 0, -786427, 0, 0, -786426, 0, 0, -786425, 0, 0, -786424, 0, 0, -786423, 0, 0, -786422, 0, 0, -786421, 0, 0, -786420, 0, 0, -786419, 0, 0, -786418, 0, 0, -786417, 0, 0, -786416, 0, 0, -786415, 0, 0, -786414, 0, 0, -786413, 0, 0, -655381, 0, 0, -720877, 0, 0, -589845, 0, 0, -655341, 0, 0, -524309, 0, 0, -589805, 0, 0, -458773, 0, 0, -524269, 0, 0, -393237, 0, 0, -458733, 0, 0, -327701, 0, 0, -393197, 0, 0, -262165, 0, 0, -327661, 0, 0, -196629, 0, 0, -262125, 0, 0, -131093, 0, 0, -196589, 0, 0, -65557, 0, 0, -131053, 0, 0, -21, 0, 0, -65517, 0, 0, 65515, 0, 0, 19, 0, 0, 131051, 0, 0, 65555, 0, 0, 196587, 0, 0, 131091, 0, 0, 262123, 0, 0, 196627, 0, 0, 327659, 0, 0, 262163, 0, 0, 393195, 0, 0, 327699, 0, 0, 458731, 0, 0, 393235, 0, 0, 524267, 0, 0, 458771, 0, 0, 589803, 0, 0, 524307, 0, 0, 655339, 0, 0, 589843, 0, 0, 720875, 0, 0, 655379, 0, 0, 786411, 0, 0, 720915, 0, 0, 851947, 0, 0, 786451, 0, 0, 917483, 0, 0, 851987, 0, 0, 983019, 0, 0, 983020, 0, 0, 983021, 0, 0, 983022, 0, 0, 983023, 0, 0, 983024, 0, 0, 983025, 0, 0, 983026, 0, 0, 983027, 0, 0, 983028, 0, 0, 983029, 0, 0, 983030, 0, 0, 983031, 0, 0, 983032, 0, 0, 983033, 0, 0, 983034, 0, 0, 983035, 0, 0, 983036, 0, 0, 983037, 0, 0, 983038, 0, 0, 983039, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0 )

[node name="Ambient" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -13.079
autoplay = true
bus = "World"

[node name="Door Open" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 3.495

[node name="DeathThud" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.244

[node name="DeathBreath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 4.435

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( -572, -202 )

[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
[connection signal="turnOn" from="Generator" to="Exit" method="_on_Generator_turnOn"]
